# minal_mlkem

./: CMakeLists.txt  Pipfile  README.md  reproduce_me.sh  test_functional.sh
analysis_scripts/: generate_graphs.py  generate_tables.py  minal.py  proba_util.py  utils.py
experiments/scripts/: generate_decoding_lines.py  raw_performance_to_csv.py  run_exp_kyber2d_dfr.sh  run_exp_kyber4d_dfr.sh  run_speed_tests.sh  test_functional_run_exp_kyber2d_dfr.sh  test_functional_run_exp_kyber4d_dfr.sh
experiments/setup/: exp_kyber2d_dfr.csv  exp_kyber2d_dfr_effect_of_dv.csv  exp_kyber2d_dfr_pk_compression_11bits.csv  exp_kyber4d_dfr.csv  exp_kyber4d_dfr_pk_compression_11bits.csv  exp_kyber4d_dfr_without_betas.csv  gen_basic_kyber_minal_dfr_multiple_parameters_setup_du_dv.py  gen_kyber2d_dfr_multiple_parameters_setup.py  test_functional_exp_kyber2d_dfr.csv  test_functional_exp_kyber4d_dfr.csv
minal_src/dfr_computation/: CMakeLists.txt  common.h  decoding_lines.h  dfr_2d_codes.c  dfr_2d_codes.h  fft_mpc.c  fft_mpc.h  joint_distribution_2d.c  minal4d_dfr_computation.c  mp_matrix.c  mp_matrix.h  prob_dist.c  prob_dist.h  toy_example_of_main_lemma.py
minal_src/dfr_computation/minal4d_defs/: dfr_relevant_points_for_selected_betas.h
minal_src/kem_implementation/: .gitignore  CMakeLists.txt
minal_src/kem_implementation/avx2/: CMakeLists.txt  fq.S  indcpa.c  invntt.S  ntt.S  poly.c  poly.h  shuffle.S  test_speed.c
minal_src/kem_implementation/ref/: CMakeLists.txt  indcpa.c  poly.c  test_speed.c
minal_src/minal_codes/: CMakeLists.txt  cpucycles.c  cpucycles.h  minal_codes.c
results/kyber2d_dfr/: result_kyber2d_dfr.csv  result_kyber2d_dfr_effect_of_dv.csv  result_kyber2d_dfr_pk_compression_11bits.csv
results/kyber4d_dfr/: result_kyber4d_dfr.csv  result_kyber4d_dfr_pk_compression_11bits.csv
results/minimum_distance/: minimum_distance_p2.csv
results/performance/: a53_performance.csv  avx2_performance.csv  m4_performance.csv  minal_codes_decode_performance.csv  ref_performance.csv
results/performance/avx2/: test_speed1024_1d.txt  test_speed1024_1d_null_eta2.txt  test_speed1024_2d.txt  test_speed1024_2d_null_eta2.txt  test_speed1024_4d.txt  test_speed1024_4d_null_eta2.txt  test_speed512_1d.txt  test_speed512_1d_null_eta2.txt  test_speed512_2d.txt  test_speed512_2d_null_eta2.txt  test_speed512_4d.txt  test_speed512_4d_null_eta2.txt  test_speed768_1d.txt  test_speed768_1d_null_eta2.txt  test_speed768_2d.txt  test_speed768_2d_null_eta2.txt  test_speed768_4d.txt  test_speed768_4d_null_eta2.txt
results/performance/extra/: test_speed768_8d.txt
results/performance/ref/: test_speed_ref1024_1d.txt  test_speed_ref1024_1d_null_eta2.txt  test_speed_ref1024_2d.txt  test_speed_ref1024_2d_null_eta2.txt  test_speed_ref1024_4d.txt  test_speed_ref1024_4d_null_eta2.txt  test_speed_ref512_1d.txt  test_speed_ref512_1d_null_eta2.txt  test_speed_ref512_2d.txt  test_speed_ref512_2d_null_eta2.txt  test_speed_ref512_4d.txt  test_speed_ref512_4d_null_eta2.txt  test_speed_ref768_1d.txt  test_speed_ref768_1d_null_eta2.txt  test_speed_ref768_2d.txt  test_speed_ref768_2d_null_eta2.txt  test_speed_ref768_4d.txt  test_speed_ref768_4d_null_eta2.txt
results/test_functional/: test_functional_result_kyber2d_dfr.csv  test_functional_result_kyber4d_dfr.csv
results/toy_example_of_main_lemma/: toy_example_of_main_lemma.txt
